# neural

./: .gitignore  Cargo.toml  README.md  shell.nix
auto-differentiation/: Cargo.toml
auto-differentiation/src/: lib.rs  record.rs  record_operations.rs  trace.rs  trace_operations.rs
src/: activation.rs  config.rs  function.rs  function_v2.rs  main.rs  mnist.rs  network.rs  utils.rs
src/differentiation/: adr.rs  mod.rs  operations.rs  record.rs  record_operations.rs  trace.rs  trace_operations.rs
src/network/: config.rs  mod.rs
