[package]
name = "neural"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.17", features = ["rayon", "serde"] }
ndarray-linalg = { version = "0.18", features = ["netlib-system"] }
ndarray-rand = "0.16"
num-traits = "0.2"
object-pool = "0.6.0"
progressing = "3.0.2"
rayon = "1.11.0"
smallvec = "1.15.1"
tracing = "0.1"
tracing-subscriber = "0.3"

pyo3 = "0.27"
numpy = "0.27"

clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }

[profile.dev.package.postcard]
opt-level = 3

[profile.heavy]
inherits = 'release'
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = false
opt-level = 3
